Update VSCode project settings, and add recommended extensions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,65 @@
 {
-    "Lua.diagnostics.globals": [
-        "SettingsPanel",
-        "SettingsTooltip",
-        "ALT_KEY",
-        "CTRL_KEY",
-        "SHIFT_KEY",
-        "NONE_KEY",
-        "VIDEO_OPTIONS_NEED_CLIENTRESTART",
-        "NORMAL_FONT_COLOR",
-        "GREEN_FONT_COLOR",
-        "VIDEO_OPTIONS_RECOMMENDED",
-        "WARNING_FONT_COLOR",
-        "DISABLED_FONT_COLOR",
-        "HIGHLIGHT_FONT_COLOR",
-        "SANCTUARY_TERRITORY",
-        "FREE_FOR_ALL_TERRITORY",
-        "CONTESTED_TERRITORY",
-        "COMBAT_ZONE",
-        "LOCATION_COLON",
-        "MISCELLANEOUS",
-        "PARENS_TEMPLATE",
-        "BATTLEGROUNDS",
-        "CONTINENT",
-        "FACTION_CONTROLLED_TERRITORY",
-        "WorldMapFrame",
-        "LFG_TYPE_DUNGEON",
-        "LEVEL_RANGE",
-        "UNKNOWN",
-        "MULTIPLE_DUNGEONS",
-        "SPELL_FAILED_FISHING_TOO_LOW"
-    ]
+  "[lua]": {
+    "editor.defaultFormatter": "JohnnyMorganz.stylua"
+  },
+  "cSpell.words": [
+    "Draenor",
+    "ispvp",
+    "Kalimdor",
+    "Northrend",
+    "Pandaria",
+    "subzone",
+    "Tiras",
+    "Torhal",
+    "Zandalar"
+  ],
+  "Lua.diagnostics.globals": [
+    "SANCTUARY_TERRITORY",
+    "FREE_FOR_ALL_TERRITORY",
+    "CONTESTED_TERRITORY",
+    "COMBAT_ZONE",
+    "UNKNOWN",
+    "LOCATION_COLON",
+    "MISCELLANEOUS",
+    "PARENS_TEMPLATE",
+    "BATTLEGROUNDS",
+    "CONTINENT",
+    "FACTION_CONTROLLED_TERRITORY",
+    "LFG_TYPE_DUNGEON",
+    "LEVEL_RANGE",
+    "MULTIPLE_DUNGEONS",
+    "SPELL_FAILED_FISHING_TOO_LOW",
+    "ACCEPT",
+    "CANCEL",
+    "CLOSE",
+    "NOT_BOUND",
+    "EXPANSION_NAME0",
+    "EXPANSION_NAME1",
+    "EXPANSION_NAME2",
+    "EXPANSION_NAME3",
+    "EXPANSION_NAME4",
+    "EXPANSION_NAME5",
+    "EXPANSION_NAME6",
+    "EXPANSION_NAME7",
+    "EXPANSION_NAME8",
+    "EXPANSION_NAME9",
+    "EXPANSION_NAME10",
+    "ZONE"
+],
+  "Lua.runtime.builtin": {
+    "basic": "disable",
+    "debug": "disable",
+    "io": "disable",
+    "math": "disable",
+    "os": "disable",
+    "package": "disable",
+    "string": "disable",
+    "table": "disable",
+    "utf8": "disable"
+  },
+  "Lua.runtime.version": "Lua 5.1",
+  "Lua.workspace.library": [
+    "~/.vscode/extensions/ketho.wow-api-0.22.1/Annotations/Core",
+    "~/.vscode/extensions/ketho.wow-api-0.22.1/Annotations/FrameXML"
+  ]
 }
