--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "editor.defaultFormatter": "JohnnyMorganz.stylua"
     },
     "cSpell.words": [
+        "Bliz",
         "Draenor",
         "ispvp",
         "Kalimdor",
@@ -63,5 +64,6 @@
     "Lua.workspace.library": [
         "~/.vscode/extensions/ketho.wow-api-0.22.1/Annotations/Core",
         "~/.vscode/extensions/ketho.wow-api-0.22.1/Annotations/FrameXML"
-    ]
+    ],
+    "Lua.type.weakUnionCheck": true
 }
