Update Lua.diagnostics.globals setting.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,27 +17,20 @@
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
     "Lua.diagnostics.globals": [
-        "SANCTUARY_TERRITORY",
-        "FREE_FOR_ALL_TERRITORY",
-        "CONTESTED_TERRITORY",
-        "COMBAT_ZONE",
-        "UNKNOWN",
-        "LOCATION_COLON",
-        "MISCELLANEOUS",
-        "PARENS_TEMPLATE",
-        "BATTLEGROUNDS",
-        "CONTINENT",
-        "FACTION_CONTROLLED_TERRITORY",
-        "LFG_TYPE_DUNGEON",
-        "LEVEL_RANGE",
-        "MULTIPLE_DUNGEONS",
-        "SPELL_FAILED_FISHING_TOO_LOW",
         "ACCEPT",
+        "ADVANCED_OPTIONS",
+        "BATTLEGROUNDS",
+        "BINDING_NAME_TOGGLEFRIENDSTAB",
+        "BINDING_NAME_TOGGLEGUILDTAB",
         "CANCEL",
         "CLOSE",
-        "NOT_BOUND",
+        "COMBAT_ZONE",
+        "CONTESTED_TERRITORY",
+        "CONTINENT",
+        "DISPLAY",
         "EXPANSION_NAME0",
         "EXPANSION_NAME1",
+        "EXPANSION_NAME10",
         "EXPANSION_NAME2",
         "EXPANSION_NAME3",
         "EXPANSION_NAME4",
@@ -46,7 +39,26 @@
         "EXPANSION_NAME7",
         "EXPANSION_NAME8",
         "EXPANSION_NAME9",
-        "EXPANSION_NAME10",
+        "FACTION_CONTROLLED_TERRITORY",
+        "FREE_FOR_ALL_TERRITORY",
+        "GREEN_FONT_COLOR_CODE",
+        "GUILD_OFFICER_NOTE",
+        "INTERFACE_OPTIONS",
+        "INVITE",
+        "LEVEL_RANGE",
+        "LFG_TYPE_DUNGEON",
+        "LOCATION_COLON",
+        "MISCELLANEOUS",
+        "MULTIPLE_DUNGEONS",
+        "NAME",
+        "NOT_BOUND",
+        "PARENS_TEMPLATE",
+        "SANCTUARY_TERRITORY",
+        "SET_NOTE",
+        "SPELL_FAILED_FISHING_TOO_LOW",
+        "STAT_FORMAT",
+        "UNKNOWN",
+        "WHISPER",
         "ZONE"
     ],
     "Lua.runtime.builtin": {
